dotnetcore/dotnetcore-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-dotnetcore-deployment
  labels:
    app: workshop-dotnetcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetcore
  template:
    metadata:
      labels:
        app: dotnetcore
    spec:
      containers:
      - name: dotnetcore-container
        image: mcr.microsoft.com/dotnet/samples:aspnetapp
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app/appsettings.json # mount nginx-conf volumn to /etc/nginx
          subPath: appsettings.json
          readOnly: true
          name: appsettings-volume
      volumes:
      - name: appsettings-volume
        configMap:
          name: appsettings-configmap # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: appsettings.json
              path: appsettings.json
