dotnetcore/dotnetcore-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapp-service
spec:
  type: ClusterIP
  selector:
    app: dotnetcore
  ports:
    - protocol: TCP
      port: 999
      targetPort: 80
